# UltraList

./: DATABASE_USAGE.md  README.md  debug_autocomplete.js  keyboardShortcuts.txt  package-lock.json  package.json  tasks.md
.github/: copilot-instructions.md
public/: logs.html  test-tauri-init.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: commands.rs  database.rs  lib.rs
src/components/: AddTaskForm.tsx  BacklogView.tsx  ConfirmationModal.tsx  DatabaseExample.tsx  EisenhowerView.tsx  FocusView.tsx  GanttView.tsx  Header.tsx  KanbanView.tsx  KeyboardShortcutsModal.tsx  PomodoroView.tsx  ProjectManagement.tsx  SavedSearchList.tsx  SearchBar.tsx  SearchBarRefactored.tsx  Task.tsx  TaskList.tsx
src/components/SearchBar/: AutocompleteSuggestions.tsx  ModeSelector.tsx  NlpHelpModal.tsx  SearchHelpModal.tsx  SearchInput.tsx  TaskPreview.tsx  index.ts  searchBarUtils.ts
src/data/: initialData.ts
src/hooks/: index.ts  useDatabase.ts  useKeyboardShortcuts.ts  useMobileMode.ts  useProjectsAndFolders.ts  useSearchBarMode.ts  useTaskFiltering.ts  useTaskForm.ts  useTasks.ts  useTemplates.ts  useTheme.ts
src/services/: databaseService.ts  logsService.ts  naturalLanguageParser.ts
src/types/: index.ts
src/utils/: tauriDebug.ts
